--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "ahj",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Chat",
+  "main": "server.js",
   "scripts": {
     "prestart": "npm install",
-    "start": "forever server.js",
+    "start": "node server.js",
     "build": "webpack --mode production",
     "lint": "eslint",
     "watch": "forever -v -w server.js"
@@ -24,11 +24,15 @@
     "package": "^1.0.1",
     "uuid": "^9.0.0",
     "webpack": "^5.75.0",
-    "ws": "^8.13.0"
+    "ws": "^8.13.0",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "forever": "^4.0.3",
     "koa-router": "^12.0.0",
     "webpack-cli": "^4.10.0"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
