--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "css-loader": "^6.7.2",
     "eslint": "^8.27.0",
+    "express": "^4.18.2",
     "html-loader": "^4.2.0",
     "koa": "^2.14.1",
     "koa-body": "^6.0.1",
@@ -24,8 +25,7 @@
     "package": "^1.0.1",
     "uuid": "^9.0.0",
     "webpack": "^5.75.0",
-    "ws": "^8.13.0",
-    "express": "^4.18.2"
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "forever": "^4.0.3",
